# TP_Final_17

./: README.md
libreria/: CMakeLists.txt  TengoQueArchivar?.cpp  activo.cpp  archivar.cpp  archivar.h  contactar.cpp  contactar.h  copiarConsMed.cpp  copiarConsMed.h  copiarPacCons.cpp  copiarPacCons.h  copiarPacCont.cpp  copiarPacCont.h  notfound.cpp  randomObS.cpp  randomObS.h  resize.cpp  resize.h  resizeCons.cpp  resizeCont.cpp  resizeMed.cpp  structs.cpp  structs.h
main/: main.cpp
unit-test/: CMakeLists.txt  TestContactar.cpp  TestRandomObS.cpp  TestResize.cpp  Tresize.cpp  casos_base.cpp  main_test.cpp  resize.cpp
